Fix links to images on about us

--- a/aboutuspage/aboutus.html
+++ b/aboutuspage/aboutus.html
@@ -25,7 +25,7 @@
   <div class="card">
     <div class="container">
     <h2><center>Tierra Buissereth</center></h2>
-    <img src="C:\Users\Admin\Downloads\IMG_5366.JPG" style="width: 25%; height: 40%; transform: rotate(90deg)">
+    <img src="tierra.jpg" style="width: 25%; height: 40%;">
       <p class="title"> </p>
       <p><font size="6">My name is Tierra Buissereth. I am a rising junior at Scotch Plains Fanwood High School in Scotch Plains, NJ.
        At school, I am a member of the marching band and the Vice President of French Club. In my free time I like to watch TV,
@@ -43,7 +43,7 @@
     <div class="card"
         <div class="container">
         <h2><center>Stefanie Donayre</center></h2>
-        <img src="C:\Users\Admin\Downloads\image.jpg.jpg" style="width: 20%; height: 40%">
+        <img src="stefdonayre.jpg" style="width: 20%; height: 40%">
         </style>
           <p class="title"> </p>
           <p><font size="6">Hi I'm Stefanie! In short, I am a writer, talk show lover, and alien advocate. I am a rising junior at Susan E.
@@ -61,7 +61,7 @@
     <div class="card">
       <div class="container">
       <h2><center>Aurpita Shafi</center></h2>
-      <img src="C:\Users\Admin\Downloads\IMG_5250.jpg" style="width: 25%; height: 40%; transform: rotate(90deg)">
+      <img src="aurpita.jpg" style="width: 25%; height: 40%; transform: rotate(90deg)">
     </style>
           <p class="title"> </p>
           <p>I am Aurpita Shafi, and I am a rising junior at Mainland Regional High School in Linwood, NJ. I am really interested in politics.
